# symlink.py

./: README.md  setup.cfg
