# https://pypi.org/project/setupcfg-generator/
[metadata]
name = symlink
version = 2019.03.14
url = https://github.com/looking-for-a-job/symlink.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = symlinks

[options]
install_requires = 
	public
	setuptools
packages = 
	symlink
